# Django-Vuejs-IOT

./: .gitmodules  Pipfile  package-lock.json  requirements.  requirements.txt  runserver.sh
QrGo/: main.go
accounts/: admin.py  api.py  models.py  serializer.py  urls.py
accounts/migrations/: 0001_initial.py  0002_auto_20201127_1037.py  0003_auto_20201127_1114.py  0004_remove_staffprofile_user.py
backend/: requirements.txt  settings.py  urls.py
backend/backend/: settings.py
backend/networker/: apps.py  views.py
flutter_app/: .packages  pubspec.yaml
flutter_app/.dart_tool/: package_config.json  package_config_subset  version
flutter_app/android/: local.properties
flutter_app/android/app/: build.gradle
flutter_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter_app/ios/Runner/: GeneratedPluginRegistrant.m
flutter_app/lib/: generated_plugin_registrant.dart  home_wid.dart  main.dart
flutter_app/lib/branch/pages/: account.dart  home_page.dart  (+1 more)
frontend/: package-lock.json  package.json  webpack-stats.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/assets/: colors
frontend/src/components/: forestgrey.css  loginform.vue  map.vue  maptest.vue  navbar.vue  register.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: About.vue  Home.vue  dashboard.vue  login.vue  signup.vue  tierI.vue  tierII.vue  tierIII.vue
nodes/: Genetic.jl  admin.py  genetic.jl  models.py  optimiser.py  serializers.py  urls.py  views.py
nodes/Genetic/: Manifest.toml  Project.toml
nodes/Genetic/src/: Genetic.jl
nodes/migrations/: 0001_initial.py  0002_auto_20201125_0648.py  0003_remove_garbagenodes_time.py  0004_auto_20201125_0702.py  0005_auto_20201127_0125.py
nodes/rust-chains/: Cargo.toml
nodes/rust-chains/src/: block.rs  blockchain.rs  hashable.rs  lib.rs  main.rs  transaction.rs
rust-chains/: Cargo.toml
rust-chains/src/: block.rs  blockchain.rs  lib.rs  main.rs
snippets/: models.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_auto_20201127_0125.py
(+4 files in other folders)
