[package]
name = "rust-chains"
version = "0.1.0"
authors = ["Michael-Law <mlawsan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
crypto-hash = "*"
hex = "0.3.2"
dotenv = "0.15.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
serde_json = "1"
lazy_static = "1.4.0"